# colorscad

./: .dockerignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  colors.scad  colorscad.sh  vcpkg.json
.github/workflows/: docker-build.yml  run-tests.yml
3mfmerge/: .gitignore  3mfmerge.cpp  CMakeLists.txt  README.md
3mfmerge/cmake/: FindLIB3MF.cmake
3mfmerge/patches/: lib3mf_fix_lib3mf.pc_path.patch  lib3mf_missing_include.patch  lib3mf_static.patch
test/: common.scad  run.sh  spikes.scad  spikes.stl  test_boolean.scad  test_color_args.scad  test_import.scad  test_nested.scad
test/expectations/: test_boolean.2019.05.3mf  test_boolean.2019.05.amf  test_boolean.3mf  test_boolean.amf  test_color_args.3mf  test_color_args.amf  test_import.3mf  test_import.amf  test_nested.3mf  test_nested.amf
